# Minecraft2D

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  RunCraft.cpp  xmake.lua
Minecraft/ErrorHandling/: ErrorHandling.hpp
Minecraft/Events/: SystemEvents.hpp
Minecraft/GUI/: GUI.hpp
RunCraft/Events/: SystemEvents.hpp
RunCraft/Render/: Render.hpp
RunCraft/Sound/: Audio.hpp
RunCraft/block/: Block.hpp  Blocks.hpp
RunCraft/client/: GameInfo.hpp  Menu.hpp
RunCraft/events/: SystemEvents.hpp
RunCraft/sound/: Audio.hpp
RunCraft/util/: GameLogger.hpp  Math_Helper.hpp
assets/: options.json
assets/blockstates/: air_block.json  andesite_block.json  bedrock_block.json  birch_log_block.json  coal_ore_block.json  cobblestone_block.json  deepslate_block.json  diamond_block.json  diorite_block.json  dirt_block.json  error_block.json  glowstone_block.json  granite_block.json  grass_block.json  iron_block.json  stone_block.json
assets/lang/: en-us.json  nl-du.json  zh-cn.json  zh-tw.json
commands/osx/: before_attach_to_Instruments.sh  build.sh  clean.sh  deploy.sh  install.sh
docs/minecraft/: WorldGen.puml
docs/runcraft/: BiomeUML.puml  InputUML.puml  Sound.puml
game/: Audio.hpp  Game.hpp  GameInfo.hpp  Menu.hpp  Render.hpp  RunCraft.hpp
game/Audio/: Audio.hpp
game/Events/: SystemEvents.hpp
game/GUI/: GUI.hpp
game/Render/: Render.hpp
game/Sound/: Audio.hpp
game/util/: File.hpp  FileHelper.hpp  GameLogger.hpp  Math_Helper.hpp  utils.hpp
game/widget/: Background.hpp  Button.hpp  GUI.hpp  Texture.hpp  Widget.hpp  WidgetManager.hpp  Widgets.hpp
include/mempool/: CMakeLists.txt  ObjectPool.cpp  ObjectPool.hpp  ObjectPool.inl  PoolableObject.hpp
include/plist/: CMakeLists.txt  Plist.cpp
include/plog/: Record.h
minecraft/: CMakeLists.txt  Minecraft.cpp  MinecraftVersion.hpp
minecraft/block/: AirBlock.hpp  AndesiteBlock.hpp  BedrockBlock.hpp  BirchLogBlock.hpp  CoalOreBlock.hpp  CobblestoneBlock.hpp  DeepslateBlock.hpp  DiamondBlock.hpp  DioriteBlock.hpp  DirtBlock.hpp  ErrorBlock.hpp  GlowstoneBlock.hpp  GraniteBlock.hpp  GrassBlock.hpp  IronBlock.hpp  StoneBlock.hpp
minecraft/block/attributes/: Block.hpp  BlockAccess.hpp  BlockIDLoader.hpp  BlockSoundGroup.hpp  BlockState.hpp  BlockTextureLoader.hpp  Blocks.hpp  TextureLoader.hpp
minecraft/client/: Layout.hpp  Menu.hpp  MinecraftClient.hpp  MinecraftClientAccess.hpp
minecraft/client/gui/: GUI.hpp
minecraft/client/gui/hud/: DebugHud.hpp  ExperienceBarHud.hpp  HealthBarHud.hpp  Hud.hpp  HungerBarHud.hpp  InGameBarHud.hpp  ItemBarHud.hpp
minecraft/client/gui/screen/: Background.hpp  Screen.hpp  ScreenManager.hpp
minecraft/client/gui/style/: GUIStyle.hpp
minecraft/client/gui/text/: RichText.hpp
minecraft/client/gui/widget/: ButtonWidget.hpp  ClickableWidget.hpp  SliderWidget.hpp  SoundSliderWidget.hpp  SplashingTextFieldWidget.hpp  TextFieldWidget.hpp  TextureWidget.hpp  TexturedButtonWidget.hpp  Widget.hpp
minecraft/client/input/: Input.hpp
minecraft/client/render/: RenderSystem.hpp  TileColor.hpp  WorldRenderer.hpp
minecraft/client/scene/: SceneAccess.hpp  SceneManager.hpp
minecraft/client/toast/: AdvancementToast.hpp  SystemToast.hpp  ToastAccess.hpp  ToastManager.hpp
minecraft/command/: CommandLine.hpp  CommandLineExecutable.hpp
minecraft/entity/: Entity.hpp  EntityAccess.hpp
minecraft/entity/player/: PlayerEntity.hpp
minecraft/error/: ErrorHandling.hpp
minecraft/events/: SystemEvents.hpp
minecraft/resource/: FileHelper.hpp  PooledSprite.hpp  System.hpp  TranslatableText.hpp
minecraft/sound/: BlockSoundGroup.hpp  MusicSoundEvent.hpp  SoundEvent.hpp  SoundEvents.hpp  SoundManager.hpp
minecraft/src/platform/osx/: Resource_System.mm
minecraft/util/: Annotations.hpp  Date.hpp  GameLogger.hpp  Hitbox.hpp  Identifier.hpp  Path.hpp  Registry.hpp  RegistryAccess.hpp  Utils.hpp
minecraft/util/image/: ppm.hpp
minecraft/util/math/: MathHelper.hpp  Random.hpp
minecraft/util/math/noise/: PerlinNoise.hpp
minecraft/world/: World.hpp  WorldAccess.hpp
minecraft/world/chunk/: Chunk.hpp  ChunkDataPacketAdapter.hpp  ChunkManager.hpp  ChunkManagerAccess.hpp  ChunkStream.hpp  ChunkStreamAccess.hpp  WorldChunk.hpp  WorldChunkAccess.hpp
minecraft/world/chunk/light/: LightingProvider.hpp  LightingProviderAccess.hpp
minecraft/world/poi/: Coordinate.hpp  Direction.hpp  Position.hpp
minecraft/world/storage/: SaveHelper.hpp
runcraft/block/: AirBlock.hpp  AndesiteBlock.hpp  BedrockBlock.hpp  BirchLogBlock.hpp  Block.hpp  BlockPos.hpp  BlockTextureLoader.hpp  Blocks.hpp  CoalOreBlock.hpp  CobblestoneBlock.hpp  DeepslateBlock.hpp  DiamondBlock.hpp  DioriteBlock.hpp  DirtBlock.hpp  ErrorBlock.hpp  GraniteBlock.hpp  GrassBlock.hpp  IronBlock.hpp  StoneBlock.hpp
runcraft/client/: GameInfo.hpp  Menu.hpp  RunCraftClient.hpp  RuncraftClient.hpp  RuncraftClientAccess.hpp
runcraft/entity/: Entity.hpp  EntityAccess.hpp
runcraft/error/: ErrorHandling.hpp
runcraft/events/: SystemEvents.hpp
runcraft/resource/: FileHelper.hpp  TranslatableText.hpp
runcraft/sound/: Audio.hpp  BlockSoundGroup.hpp  MusicSoundEvent.hpp  SoundEvent.hpp  SoundEvents.hpp  SoundManager.hpp
runcraft/util/: GameLogger.hpp  Hitbox.hpp  Identifier.hpp  MathHelper.hpp  Path.hpp  Registry.hpp  RegistryAccess.hpp  Utils.hpp  ppm.hpp
runcraft/world/: World.hpp  WorldAccess.hpp
test/minecraft-client/: CMakeLists.txt
test/minecraft-client/test_bitsery/: BitseryStreamTest.cpp
test/minecraft-client/test_block/: BlockIDTest.cpp
test/minecraft-client/test_mempool/: MemPoolTest.cpp
test/minecraft-client/test_util/: IdentifierTest.cpp
test/minecraft-client/test_world_gen/: 2*noise(50,50,0,8).ppm  demo_chunk_0.ppm
test/test_bitsery/: BitseryStreamTest.cpp  BitseryTest.cpp
test/test_block/: BlockIDTest.cpp  BlockTest.cpp  BlockTextureLoaderTest.hpp  CMakeLists.txt
test/test_input/: InputTest.cpp
test/test_math/: MathTest.cpp
test/test_resource/: CMakeLists.txt  ResourceTest.cpp
test/test_util/: IdentifierTest.cpp
test/test_world/: WorldStorageTest.cpp
(+117 files in other folders)
